Add profile page code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,38 @@
     </article>
 
     <article class="slide-2">
-
+      <div class="top-flex"></div>
+      <div class="slide-content">
+        <h2 class="profession">Engineering Leadership Coach</h2>
+        <div class="profile-box">
+          <section class="profile-info">
+            <p>
+              With a career trajectory that took me from developer to Director of Engineering, I have firsthand experience in scaling engineering teams and guiding companies through transitions.
+            </p>
+            <p>
+              My expertise lies in turning technical professionals into skilled managers and leaders.
+            </p>
+            <p>
+              <a class="icon-button" href="https://www.linkedin.com/in/prajwalit/">
+                <img src="images/LinkedIn.png" class="icon-button-img"/>
+                LinkedIn
+              </a>
+              <a class="icon-button" href="mailto:contact@prajwalit.com">
+                <img src="images/Email.png" class="icon-button-img"/>
+                Email
+              </a>
+              <a class="icon-button" href="https://twitter.com/prajwalit">
+                <img src="images/Twitter.png" class="icon-button-img"/>
+                Twitter
+              </a>
+            </p>
+          </section>
+          <section class="profile-pic">
+            <img src="images/profile-pic.png" />
+          </section>
+        </div>
+      </div>
+      <div class="bottom-flex"></div>
     </article>
 
     <article class="slide-3">
@@ -33,7 +64,7 @@
     </article>
 
     <footer>
-      
+
     </footer>
     
 	<script src="js/home.js"></script>
