Add footer content

--- a/index.html
+++ b/index.html
@@ -64,7 +64,20 @@
     </article>
 
     <footer>
-
+      <div class="copyrights">
+        &copy; 2024 Prajwalit.com <br/> All rights reserved.
+      </div>
+      <div class="social-icons">
+        <a class="icon-button" href="https://www.linkedin.com/in/prajwalit/">
+          <img src="images/LinkedIn.png" class="icon-button-img"/>
+        </a>
+        <a class="icon-button" href="mailto:contact@prajwalit.com">
+          <img src="images/Email.png" class="icon-button-img"/>
+        </a>
+        <a class="icon-button" href="https://twitter.com/prajwalit">
+          <img src="images/Twitter.png" class="icon-button-img"/>
+        </a>
+      </div>
     </footer>
     
 	<script src="js/home.js"></script>
