--- a/index.html
+++ b/index.html
@@ -60,7 +60,24 @@
     </article>
 
     <article class="slide-3">
-
+      <div class="top-flex"></div>
+      <div class="slide-content">
+        <h2 class="profession">Fractional Leadership in Engineering, Product, and Design</h2>
+        <div class="profile-box">
+          <section class="profile-info">
+            <p>
+              I have had the privilege of working in startups where passion for one's craft is a shared priority across Engineering, Product, and Design. My journey through these departments has afforded me diverse perspectives and the opportunity to lead and scale multidisciplinary teams that built products reaching over 2 billion devices.
+            </p>
+            <p>
+              I specialize in mentoring companies facing scaling challenges, from increasing user bases to expanding technical and human resources. My approach has consistently delivered growth and innovation.
+            </p>
+            <p>
+              If you're exploring leadership options to help scale your business or are interested in my approach to overcoming growth challenges, please <a class="link" href="mailto:contact@prajwalit.com">contact me</a>.
+            </p>
+          </section>
+        </div>
+      </div>
+      <div class="bottom-flex"></div>
     </article>
 
     <footer>
