Add some minor fixes

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="profile-box">
           <section class="profile-info">
             <p>
-              With a career trajectory that took me from developer to Director of Engineering, I have firsthand experience in scaling engineering teams and guiding companies through transitions.
+              With a career trajectory that took me from developer to Director of Engineering, I have first-hand experience in scaling engineering teams and guiding companies through transitions.
             </p>
             <p>
               My expertise lies in turning technical professionals into skilled managers and leaders.
@@ -62,7 +62,7 @@
     <article class="slide-3">
       <div class="top-flex"></div>
       <div class="slide-content">
-        <h2 class="profession">Fractional Leadership in Engineering, Product, and Design</h2>
+        <h2 class="profession">Fractional Leadership: Tech, Product & Design</h2>
         <div class="profile-box">
           <section class="profile-info">
             <p>
