Add unravel related info

--- a/index.html
+++ b/index.html
@@ -7,8 +7,16 @@
     <title>Prajwalit</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&family=Saira&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/home.css">
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-LSBHSH392S"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-LSBHSH392S');
+    </script>
   </head>
   <body>
     <article class="slide-1">
@@ -18,13 +26,42 @@
       </div>
       <section class="quote">
         <div class="quote-content">
-          <h4 class="role">Founder, Salher</h4>
+          <h4 class="role">Founder, Unravel</h4>
           “Shaping successful engineering leaders today to navigate the challenges of tomorrow.”
         </div> 
       </section>
     </article>
 
     <article class="slide-2">
+      <div class="top-flex"></div>
+      <div class="slide-content">
+        <h2 class="profession">Founder, <span class="unravel-logo"><span class="unravel-logo-hl">un</span>ravel</span></h2>
+        <div class="offering-box">
+          <div class="offering">
+            <h3 class="offering-header">
+              <img class="offering-icon" src="images/leader.png" />
+              Engineering Leadership Coaching
+            </h3>
+            <p>Elevate your engineering managers with our expert coaching program. We specialize in enhancing leadership skills to reduce senior leadership burden and ensure the long-term success of managers and their teams. Our blend of workshops and personalized one-on-one sessions effectively transforms technical talent into skilled, visionary leaders.</p>
+          </div>
+
+          <div class="offering">
+            <h3 class="offering-header">
+              <img class="offering-icon" src="images/AI.png" />
+              AI Apps and Integration Services
+            </h3>
+            <p>Specializing in elevating startups, our team brings essential Generative AI capabilities to your business, quickly and efficiently. Whether you’re just starting or scaling up, we provide the expertise and technology to seamlessly integrate AI solutions, enhancing your product offerings and driving innovation.
+            </p>
+          </div>
+        </div>
+        <a class="icon-button" href="https://www.unravel.tech">
+          Visit Unravel.tech
+        </a>
+      </div>
+      <div class="bottom-flex"></div>
+    </article>
+
+    <article class="slide-3">
       <div class="top-flex"></div>
       <div class="slide-content">
         <h2 class="profession">Engineering Leadership Coach</h2>
@@ -59,7 +96,7 @@
       <div class="bottom-flex"></div>
     </article>
 
-    <article class="slide-3">
+    <article class="slide-4">
       <div class="top-flex"></div>
       <div class="slide-content">
         <h2 class="profession">Fractional Leadership: Tech, Product & Design</h2>
@@ -69,7 +106,7 @@
               I have had the privilege of working in startups where passion for one's craft is a shared priority across Engineering, Product, and Design. My journey through these departments has afforded me diverse perspectives and the opportunity to lead and scale multidisciplinary teams that built products reaching over 2 billion devices.
             </p>
             <p>
-              I specialize in mentoring companies facing scaling challenges, from increasing user bases to expanding technical and human resources. My approach has consistently delivered growth and innovation.
+              I specialize in mentoring companies facing scaling challenges, from increasing user bases to expanding technical resources and organization. My approach has consistently delivered growth and innovation.
             </p>
             <p>
               If you're exploring leadership options to help scale your business or are interested in my approach to overcoming growth challenges, please <a class="link" href="mailto:contact@prajwalit.com">contact me</a>.
