Cleanup HTML, CSS

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
     </script>
   </head>
   <body>
-    <article class="slide-1">
+    <article class="slide-intro">
       <div class="name-box">
-        <h1>Hi, this is</h1>
-        <h1 class="accent">Prajwalit</h1>
+        <h1 class="intro">Hi, this is</h1>
+        <h1 class="name">Prajwalit</h1>
       </div>
       <section class="quote">
         <div class="quote-content">
@@ -33,10 +33,10 @@
       </section>
     </article>
 
-    <article class="slide-2">
+    <article class="slide-unravel">
       <div class="top-flex"></div>
       <div class="slide-content">
-        <h2 class="profession">Founder, <span class="unravel-logo"><span class="unravel-logo-hl">un</span>ravel</span></h2>
+        <h2 class="slider-title">Founder, <a class="link-plain" href="https://www.unravel.tech"><span class="unravel-logo"><span class="unravel-logo-hl">un</span>ravel</span></a></h2>
         <div class="offering-box">
           <div class="offering">
             <h3 class="offering-header">
@@ -55,19 +55,19 @@
             </p>
           </div>
         </div>
-        <a class="icon-button" href="https://www.unravel.tech">
+        <a class="button-link" href="https://www.unravel.tech">
           Visit Unravel.tech
         </a>
       </div>
       <div class="bottom-flex"></div>
     </article>
 
-    <article class="slide-3">
+    <article class="slide-coach">
       <div class="top-flex"></div>
       <div class="slide-content">
-        <h2 class="profession">Engineering Leadership Coach</h2>
-        <div class="profile-box">
-          <section class="profile-info">
+        <h2 class="slider-title">Engineering Leadership Coach</h2>
+        <div class="coach-profile-box">
+          <section class="coach-profile-info">
             <p>
               With a career trajectory that took me from developer to Director of Engineering, I have first-hand experience in scaling engineering teams and guiding companies through transitions.
             </p>
@@ -75,34 +75,34 @@
               My expertise lies in turning technical professionals into skilled managers and leaders.
             </p>
             <p>
-              <a class="icon-button" href="https://www.linkedin.com/in/prajwalit/">
-                <img src="images/LinkedIn.png" class="icon-button-img"/>
+              <a class="button-link" href="https://www.linkedin.com/in/prajwalit/">
+                <img src="images/LinkedIn.png" class="button-link-icon"/>
                 LinkedIn
               </a>
-              <a class="icon-button" href="mailto:contact@prajwalit.com">
-                <img src="images/Email.png" class="icon-button-img"/>
+              <a class="button-link" href="mailto:contact@prajwalit.com">
+                <img src="images/Email.png" class="button-link-icon"/>
                 Email
               </a>
-              <a class="icon-button" href="https://twitter.com/prajwalit">
-                <img src="images/Twitter.png" class="icon-button-img"/>
+              <a class="button-link" href="https://twitter.com/prajwalit">
+                <img src="images/Twitter.png" class="button-link-icon"/>
                 Twitter
               </a>
             </p>
           </section>
-          <section class="profile-pic">
-            <img src="images/profile-pic.png" />
+          <section class="coach-profile-pic-box">
+            <img class="coach-profile-pic" src="images/profile-pic.png" />
           </section>
         </div>
       </div>
       <div class="bottom-flex"></div>
     </article>
 
-    <article class="slide-4">
+    <article class="slide-leader">
       <div class="top-flex"></div>
       <div class="slide-content">
-        <h2 class="profession">Fractional Leadership: Tech, Product & Design</h2>
-        <div class="profile-box">
-          <section class="profile-info">
+        <h2 class="slider-title">Fractional Leadership: Tech, Product & Design</h2>
+        <div>
+          <section>
             <p>
               I have had the privilege of working in startups where passion for one's craft is a shared priority across Engineering, Product, and Design. My journey through these departments has afforded me diverse perspectives and the opportunity to lead and scale multidisciplinary teams that built products reaching over 2 billion devices.
             </p>
@@ -123,14 +123,14 @@
         &copy; 2024 Prajwalit.com <br/> All rights reserved.
       </div>
       <div class="social-icons">
-        <a class="icon-button" href="https://www.linkedin.com/in/prajwalit/">
-          <img src="images/LinkedIn.png" class="icon-button-img"/>
+        <a class="button-link" href="https://www.linkedin.com/in/prajwalit/">
+          <img src="images/LinkedIn.png" class="button-link-icon"/>
         </a>
-        <a class="icon-button" href="mailto:contact@prajwalit.com">
-          <img src="images/Email.png" class="icon-button-img"/>
+        <a class="button-link" href="mailto:contact@prajwalit.com">
+          <img src="images/Email.png" class="button-link-icon"/>
         </a>
-        <a class="icon-button" href="https://twitter.com/prajwalit">
-          <img src="images/Twitter.png" class="icon-button-img"/>
+        <a class="button-link" href="https://twitter.com/prajwalit">
+          <img src="images/Twitter.png" class="button-link-icon"/>
         </a>
       </div>
     </footer>
