--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <div class="offering-box">
           <div class="offering">
             <h3 class="offering-header">
-              <img class="offering-icon" src="images/leader.png" />
+              <img class="offering-icon" src="images/Leader.png" />
               Engineering Leadership Coaching
             </h3>
             <p>Elevate your engineering managers with our expert coaching program. We specialize in enhancing leadership skills to reduce senior leadership burden and ensure the long-term success of managers and their teams. Our blend of workshops and personalized one-on-one sessions effectively transforms technical talent into skilled, visionary leaders.</p>
