Add Open Graph Meta

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta property="og:title" content="Prajwalit.com">
+    <meta property="og:image" content="https://prajwalit.com/images/profile-pic.png">
+    <meta property="og:description" content="Founder at Unravel; Engineering Leadership Coach; Fractional Leadership">
+    <meta property="og:url" content="https://prajwalit.com">
     <title>Prajwalit</title>
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
