Add section for free mentorship

--- a/index.html
+++ b/index.html
@@ -122,6 +122,33 @@
       <div class="bottom-flex"></div>
     </article>
 
+    <article class="slide-mentor">
+      <div class="top-flex"></div>
+      <div class="slide-content">
+        <h2 class="slider-title">Free Mentorship for Engineering Leaders</h2>
+        <div class="mentor-info-box">
+          <section class="session-info">
+            <p>In transitioning from an IC to an Engineering manager, I encountered my own set of challenges and confusions. To ease this journey for others, I offer complimentary 45-minute mentorship sessions twice a week, specifically aimed at new or aspiring engineering leaders.</p>
+            <p>During these sessions, we'll tackle the specific issues you're facing, leveraging my experiences and insights to foster your growth in leadership and management skills.</p>
+          </section>
+          <section class="session-link">
+            <p>
+              You can go to my Topmate profile for booking slots. The number of slots are fixed but the timing is flexible. We can decide the time after you book.
+            </p>
+            <p>
+              <a class="button-link" href="https://topmate.io/prajwalit/">
+                <img src="images/Topmate.png" class="button-link-icon"/>
+                Let's Connect
+              </a>
+            </p>
+          </section>
+        </div>
+      </div>
+      <div class="bottom-flex"></div>
+    </article>
+
+
+
     <footer>
       <div class="copyrights">
         &copy; 2024 Prajwalit.com <br/> All rights reserved.
