Add testimonials section

--- a/index.html
+++ b/index.html
@@ -147,7 +147,33 @@
       <div class="bottom-flex"></div>
     </article>
 
-
+    <article class="slide-testimonials">
+      <div class="top-flex"></div>
+      <div class="slide-content">
+        <h2 class="slider-title">Testimonials</h2>
+        <div class="testimonials-box" dir="ltr">
+          <section class="testimonial">
+            <p>I have had the pleasure of having Prajwalit as my manager for about 2 years, and we've been colleagues for 7 years. It's not an exaggeration when I say I learnt the most in those 2 years of my 13 year career in IT.</p>
+            <p>He helped me transition from an individual contributor to an engineering manager very smoothly. What's most impressive is his ability to identify people's skills, guide them in the right direction and position them as well as the company for success. He is a great leader and a true asset, I've personally seen him help scale the company we were part of from a small startup to a mid sized company. Would love to work with him again any opportunity I get.</p>
+            <p class="t-name">- Ramya Venkatesh</p>
+            <p class="t-company">Helpshift</p>
+          </section>
+          <section class="testimonial">
+            <p>Prajwalit has a knack for identifying leadership potential buried deep within reluctant senior engineers. During his time at Helpshift, he was instrumental in pushing me and a few others to take up engineering management as a career. He has been instrumental in my career as an Engineering Manager.</p>
+            <p>Even after departing from the company, he remains a mentor. I often find myself consulting him on various aspects of people management. From having authentic relationships with your team members to having hard conversations, I have learned everything I know from him.</p>
+            <p class="t-name">- Amogh Talpallikar</p>
+            <p class="t-company">Helpshift</p>
+          </section>
+          <section class="testimonial">
+            <p>Prajwalit, a great leader himself has groomed multiple successful leaders over the years I've known him. His varied experiences makes him understand the nuances of effective leadership within an engineering context.</p>
+            <p>Learning from him has been transformational and has equipped me well to handle complex challenges/scenarios with empathy and clarity of thought. I wholeheartedly recommend his services to any organization looking to elevate their engineering leadership capabilities.</p>
+            <p class="t-name">- Rubal Jabbal</p>
+            <p class="t-company">Helpshift</p>
+          </section>
+        </div>
+      </div>
+      <div class="bottom-flex"></div>
+    </article>
 
     <footer>
       <div class="copyrights">
