Add target _blank everywhere

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <article class="slide-unravel">
       <div class="top-flex"></div>
       <div class="slide-content">
-        <h2 class="slider-title">Founder, <a class="link-plain" href="https://www.unravel.tech"><span class="unravel-logo"><span class="unravel-logo-hl">un</span>ravel</span></a></h2>
+        <h2 class="slider-title">Founder, <a class="link-plain" href="https://www.unravel.tech" target="_blank"><span class="unravel-logo"><span class="unravel-logo-hl">un</span>ravel</span></a></h2>
         <div class="offering-box">
           <div class="offering">
             <h3 class="offering-header">
@@ -59,7 +59,7 @@
             </p>
           </div>
         </div>
-        <a class="button-link" href="https://www.unravel.tech">
+        <a class="button-link" href="https://www.unravel.tech" target="_blank">
           Visit Unravel.tech
         </a>
       </div>
@@ -79,15 +79,15 @@
               My expertise lies in turning technical professionals into skilled managers and leaders.
             </p>
             <p>
-              <a class="button-link" href="https://www.linkedin.com/in/prajwalit/">
+              <a class="button-link" href="https://www.linkedin.com/in/prajwalit/" target="_blank">
                 <img src="images/LinkedIn.png" class="button-link-icon"/>
                 LinkedIn
               </a>
-              <a class="button-link" href="mailto:contact@prajwalit.com">
+              <a class="button-link" href="mailto:contact@prajwalit.com" target="_blank">
                 <img src="images/Email.png" class="button-link-icon"/>
                 Email
               </a>
-              <a class="button-link" href="https://twitter.com/prajwalit">
+              <a class="button-link" href="https://twitter.com/prajwalit" target="_blank">
                 <img src="images/Twitter.png" class="button-link-icon"/>
                 Twitter
               </a>
@@ -136,7 +136,7 @@
               You can go to my Topmate profile for booking slots. The number of slots are fixed but the timing is flexible. We can decide the time after you book.
             </p>
             <p>
-              <a class="button-link" href="https://topmate.io/prajwalit/">
+              <a class="button-link" href="https://topmate.io/prajwalit/" target="_blank">
                 <img src="images/Topmate.png" class="button-link-icon"/>
                 Let's Connect
               </a>
@@ -180,13 +180,16 @@
         &copy; 2024 Prajwalit.com <br/> All rights reserved.
       </div>
       <div class="social-icons">
-        <a class="button-link" href="https://www.linkedin.com/in/prajwalit/">
+        <a class="button-link" href="https://www.linkedin.com/in/prajwalit/" target="_blank">
           <img src="images/LinkedIn.png" class="button-link-icon"/>
         </a>
-        <a class="button-link" href="mailto:contact@prajwalit.com">
+        <a class="button-link" href="https://topmate.io/prajwalit/" target="_blank">
+          <img src="images/Topmate.png" class="button-link-icon"/>
+        </a>
+        <a class="button-link" href="mailto:contact@prajwalit.com" target="_blank">
           <img src="images/Email.png" class="button-link-icon"/>
         </a>
-        <a class="button-link" href="https://twitter.com/prajwalit">
+        <a class="button-link" href="https://twitter.com/prajwalit" target="_blank">
           <img src="images/Twitter.png" class="button-link-icon"/>
         </a>
       </div>
