Add inline links

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </script>
   </head>
   <body>
-    <article class="slide-intro">
+    <article class="slide-intro" id="intro">
       <div class="name-box">
         <h1 class="intro">Hi, this is</h1>
         <h1 class="name">Prajwalit</h1>
@@ -37,7 +37,7 @@
       </section>
     </article>
 
-    <article class="slide-unravel">
+    <article class="slide-unravel" id="unravel">
       <div class="top-flex"></div>
       <div class="slide-content">
         <h2 class="slider-title">Founder, <a class="link-plain" href="https://www.unravel.tech" target="_blank"><span class="unravel-logo"><span class="unravel-logo-hl">un</span>ravel</span></a></h2>
@@ -66,7 +66,7 @@
       <div class="bottom-flex"></div>
     </article>
 
-    <article class="slide-coach">
+    <article class="slide-coach" id="coach">
       <div class="top-flex"></div>
       <div class="slide-content">
         <h2 class="slider-title">Engineering Leadership Coach</h2>
@@ -101,7 +101,7 @@
       <div class="bottom-flex"></div>
     </article>
 
-    <article class="slide-leader">
+    <article class="slide-leader" id="leader">
       <div class="top-flex"></div>
       <div class="slide-content">
         <h2 class="slider-title">Fractional Leadership: Tech, Product & Design</h2>
@@ -122,7 +122,7 @@
       <div class="bottom-flex"></div>
     </article>
 
-    <article class="slide-mentor">
+    <article class="slide-mentor" id="mentor">
       <div class="top-flex"></div>
       <div class="slide-content">
         <h2 class="slider-title">Free Mentorship for Engineering Leaders</h2>
@@ -147,7 +147,7 @@
       <div class="bottom-flex"></div>
     </article>
 
-    <article class="slide-testimonials">
+    <article class="slide-testimonials" id="testimonials">
       <div class="top-flex"></div>
       <div class="slide-content">
         <h2 class="slider-title">Testimonials</h2>
